feat add app menu

--- a/app/components/MainHeader/MainHeader.module.css
+++ b/app/components/MainHeader/MainHeader.module.css
@@ -1,11 +1,17 @@
 .header {
   padding: 0 40px;
-  /* display: flex;
-  justify-content: space-between; */
+  max-width: 1120px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 @media (max-width: 575px) {
   .header {
     padding: 0 15px !important;
   }
+}
+
+.menu {
+  display: flex;
+  align-items: center;
 }
